==> Coloryr/ID3MP3/Core/Src/vs10xx/vs10xx.c <==
#include "vs10xx.h"
#include "cmsis_os.h"

void VS_SPI_SpeedLow(void)
{
    LL_SPI_SetBaudRatePrescaler(SPI1, LL_SPI_BAUDRATEPRESCALER_DIV32);
}

void VS_SPI_SpeedHigh(void)
{
    LL_SPI_SetBaudRatePrescaler(SPI1, LL_SPI_BAUDRATEPRESCALER_DIV4);
}

void VS_Soft_Reset(void)
{
    uint8_t retry = 0;
    while (VS_DQ == 0)
        ;                       //等待软件复位结束
    VS_SPI_ReadWriteByte(0Xff); //启动传输
    retry = 0;
    while (VS_RD_Reg(SPI_MODE) != 0x0800) // 软件复位,新模式
    {
        VS_WR_Cmd(SPI_MODE, 0x0804);   // 软件复位,新模式
        osDelay(2 / portTICK_RATE_MS); //等待至少1.35ms
        if (retry++ > 100)
            break;
    }
    while (VS_DQ == 0)
        ; //等待软件复位结束
    retry = 0;
    while (VS_RD_Reg(SPI_CLOCKF) != 0X9800) //设置VS10XX的时钟,3倍频 ,1.5xADD
    {
        VS_WR_Cmd(SPI_CLOCKF, 0X9800); //设置VS10XX的时钟,3倍频 ,1.5xADD
        if (retry++ > 100)
            break;
    }
    osDelay(20 / portTICK_RATE_MS);
}

uint8_t VS_HD_Reset(void)
{
    uint8_t retry = 0;
    VS_RST = 0;
    osDelay(20 / portTICK_RATE_MS);
    VS_XDCS = 1; //取消数据传输
    VS_XCS = 1;  //取消数据传输
    VS_RST = 1;
    while (VS_DQ == 0 && retry < 200) //等待DREQ为高
    {
        retry++;
        osDelay(1 / portTICK_RATE_MS);
    };
    osDelay(20 / portTICK_RATE_MS);
    if (retry >= 200)
        return 1;
    else
        return 0;
}

void VS_Sine_Test(void)
{
    VS_HD_Reset();
    VS_Soft_Reset();
    VS_Set_Vol(100);
    VS_WR_Cmd(SPI_MODE, 0x0820); //进入VS10XX的测试模式
    while (VS_DQ == 0)
        ; //等待DREQ为高
    //向VS10XX发送正弦测试命令：0x53 0xef 0x6e n 0x00 0x00 0x00 0x00
    //其中n = 0x24, 设定VS10XX所产生的正弦波的频率值，具体计算方法见VS10XX的datasheet
    VS_SPI_SpeedLow(); //低速
    VS_XDCS = 0;       //选中数据传输
    VS_SPI_ReadWriteByte(0x53);
    VS_SPI_ReadWriteByte(0xef);
    VS_SPI_ReadWriteByte(0x6e);
    VS_SPI_ReadWriteByte(0x24);
    VS_SPI_ReadWriteByte(0x00);
    VS_SPI_ReadWriteByte(0x00);
    VS_SPI_ReadWriteByte(0x00);
    VS_SPI_ReadWriteByte(0x00);
    osDelay(100 / portTICK_RATE_MS);
    VS_XDCS = 1;
    //退出正弦测试
    VS_XDCS = 0; //选中数据传输
    VS_SPI_ReadWriteByte(0x45);
    VS_SPI_ReadWriteByte(0x78);
    VS_SPI_ReadWriteByte(0x69);
    VS_SPI_ReadWriteByte(0x74);
    VS_SPI_ReadWriteByte(0x00);
    VS_SPI_ReadWriteByte(0x00);
    VS_SPI_ReadWriteByte(0x00);
    VS_SPI_ReadWriteByte(0x00);
    osDelay(100 / portTICK_RATE_MS);
    VS_XDCS = 1;

    //再次进入正弦测试并设置n值为0x44，即将正弦波的频率设置为另外的值
    VS_XDCS = 0; //选中数据传输
    VS_SPI_ReadWriteByte(0x53);
    VS_SPI_ReadWriteByte(0xef);
    VS_SPI_ReadWriteByte(0x6e);
    VS_SPI_ReadWriteByte(0x44);
    VS_SPI_ReadWriteByte(0x00);
    VS_SPI_ReadWriteByte(0x00);
    VS_SPI_ReadWriteByte(0x00);
    VS_SPI_ReadWriteByte(0x00);
    osDelay(100 / portTICK_RATE_MS);
    VS_XDCS = 1;
    //退出正弦测试
    VS_XDCS = 0; //选中数据传输
    VS_SPI_ReadWriteByte(0x45);
    VS_SPI_ReadWriteByte(0x78);
    VS_SPI_ReadWriteByte(0x69);
    VS_SPI_ReadWriteByte(0x74);
    VS_SPI_ReadWriteByte(0x00);
    VS_SPI_ReadWriteByte(0x00);
    VS_SPI_ReadWriteByte(0x00);
    VS_SPI_ReadWriteByte(0x00);
    osDelay(100 / portTICK_RATE_MS);
    VS_XDCS = 1;
}

uint16_t VS_Ram_Test(void)
{
    VS_HD_Reset();
    VS_WR_Cmd(SPI_MODE, 0x0820); // 进入VS10XX的测试模式
    while (VS_DQ == 0)
        ;              // 等待DREQ为高
    VS_SPI_SpeedLow(); //低速
    VS_XDCS = 0;       // xDCS = 1，选择VS10XX的数据接口
    VS_SPI_ReadWriteByte(0x4d);
    VS_SPI_ReadWriteByte(0xea);
    VS_SPI_ReadWriteByte(0x6d);
    VS_SPI_ReadWriteByte(0x54);
    VS_SPI_ReadWriteByte(0x00);
    VS_SPI_ReadWriteByte(0x00);
    VS_SPI_ReadWriteByte(0x00);
    VS_SPI_ReadWriteByte(0x00);
    osDelay(150 / portTICK_RATE_MS);
    VS_XDCS = 1;
    return VS_RD_Reg(SPI_HDAT0); // VS1003如果得到的值为0x807F，则表明完好;VS1053为0X83FF.;
}
