==> Javesun99/stm32_recoder/applications/VS10XX.c <==
#include "vs10XX.h"
#include "drv_spi.h"
#include "rtthread.h"
#include "drivers/spi.h"
#define VS1053_NAME		"spi10"
#define VS_DQ       GET_PIN(A,12)  		//DREQ input
#define VS_RST      GET_PIN(A,11) 		//RST
#define VS_XCS      GET_PIN(A,8)  		//XCS
#define VS_XDCS     GET_PIN(A,4)  		//XDCS

void VS_SPI_SpeedLow(void)
{
	struct rt_spi_configuration config;
	config.data_width = 8;
	config.mode = RT_SPI_MASTER| RT_SPI_MODE_3 | RT_SPI_MSB;
	config.max_hz = 10000000;
	rt_spi_configure(spi_dev_vs1053, &config);

}

void VS_SPI_SpeedHigh(void)
{
	struct rt_spi_configuration config;
	config.data_width = 8;
	config.mode = RT_SPI_MASTER| RT_SPI_MODE_3 | RT_SPI_MSB;
	config.max_hz = 60000000;
	rt_spi_configure(spi_dev_vs1053, &config);
}

void VS_Soft_Reset(void)
{
	uint8_t retry=0;
	while(rt_pin_read(VS_DQ)==0); //等待软件复位结束
	VS_SPI_ReadWriteByte(0Xff);//启动传输
	retry=0;
	while(VS_RD_Reg(SPI_MODE)!=0x0800)// 软件复位,新模式
	{
		VS_WR_Cmd(SPI_MODE,0x0804);// 软件复位,新模式
		rt_thread_mdelay(2);//等待至少1.35ms
		if(retry++>100)break;
	}
	while(rt_pin_read(VS_DQ)==0);//等待软件复位结束
	retry=0;
	while(VS_RD_Reg(SPI_CLOCKF)!=0X9800)//设置VS10XX的时钟,3倍频 ,1.5xADD
	{
		VS_WR_Cmd(SPI_CLOCKF,0X9800);//设置VS10XX的时钟,3倍频 ,1.5xADD
		if(retry++>100)break;
	}
	rt_thread_mdelay(20);
}

uint8_t VS_HD_Reset(void)
{
	uint8_t retry=0;
	rt_pin_write(VS_RST,0);
	rt_thread_mdelay(20);
	rt_pin_write(VS_XDCS,1);//取消数据传输
	rt_pin_write(VS_XCS,1);//取消数据传输
	rt_pin_write(VS_RST,1);
	while(VS_DQ==0&&retry<200)//等待DREQ为高
	{
		retry++;
		rt_hw_us_delay(50);
	};
	rt_thread_mdelay(20);
	if(retry>=200)return 1;
	else return 0;
}

void VS_Sine_Test(void)
{
	VS_HD_Reset();
	VS_WR_Cmd(0x0b,0X2020);	  //设置音量
 	VS_WR_Cmd(SPI_MODE,0x0820);//进入VS10XX的测试模式
	while(rt_pin_read(VS_DQ)==0);     //等待DREQ为高
	//printf("mode sin:%x\n",VS_RD_Reg(SPI_MODE));
 	//向VS10XX发送正弦测试命令：0x53 0xef 0x6e n 0x00 0x00 0x00 0x00
 	//其中n = 0x24, 设定VS10XX所产生的正弦波的频率值，具体计算方法见VS10XX的datasheet
  	VS_SPI_SpeedLow();//低速
	rt_pin_write(VS_XDCS,0);//选中数据传输
	VS_SPI_ReadWriteByte(0x53);
	VS_SPI_ReadWriteByte(0xef);
	VS_SPI_ReadWriteByte(0x6e);
	VS_SPI_ReadWriteByte(0x24);
	VS_SPI_ReadWriteByte(0x00);
	VS_SPI_ReadWriteByte(0x00);
	VS_SPI_ReadWriteByte(0x00);
	VS_SPI_ReadWriteByte(0x00);
	rt_thread_mdelay(100);
	rt_pin_write(VS_XDCS,1);
    //退出正弦测试
    rt_pin_write(VS_XDCS,0);//选中数据传输
	VS_SPI_ReadWriteByte(0x45);
	VS_SPI_ReadWriteByte(0x78);
	VS_SPI_ReadWriteByte(0x69);
	VS_SPI_ReadWriteByte(0x74);
	VS_SPI_ReadWriteByte(0x00);
	VS_SPI_ReadWriteByte(0x00);
	VS_SPI_ReadWriteByte(0x00);
	VS_SPI_ReadWriteByte(0x00);
	rt_thread_mdelay(100);
	rt_pin_write(VS_XDCS,1);

    //再次进入正弦测试并设置n值为0x44，即将正弦波的频率设置为另外的值
    rt_pin_write(VS_XDCS,0);//选中数据传输
	VS_SPI_ReadWriteByte(0x53);
	VS_SPI_ReadWriteByte(0xef);
	VS_SPI_ReadWriteByte(0x6e);
	VS_SPI_ReadWriteByte(0x44);
	VS_SPI_ReadWriteByte(0x00);
	VS_SPI_ReadWriteByte(0x00);
	VS_SPI_ReadWriteByte(0x00);
	VS_SPI_ReadWriteByte(0x00);
	rt_thread_mdelay(100);
 	rt_pin_write(VS_XDCS,1);
    //退出正弦测试
    rt_pin_write(VS_XDCS,0);//选中数据传输
	VS_SPI_ReadWriteByte(0x45);
	VS_SPI_ReadWriteByte(0x78);
	VS_SPI_ReadWriteByte(0x69);
	VS_SPI_ReadWriteByte(0x74);
	VS_SPI_ReadWriteByte(0x00);
	VS_SPI_ReadWriteByte(0x00);
	VS_SPI_ReadWriteByte(0x00);
	VS_SPI_ReadWriteByte(0x00);
	rt_thread_mdelay(100);
	rt_pin_write(VS_XDCS,1);
}

uint16_t VS_Ram_Test(void)
{
	VS_HD_Reset();
 	VS_WR_Cmd(SPI_MODE,0x0820);// 进入VS10XX的测试模式
	while (rt_pin_read(VS_DQ)==0); // 等待DREQ为高
 	VS_SPI_SpeedLow();//低速
	rt_pin_write(VS_XDCS,0);	       		    // xDCS = 1，选择VS10XX的数据接口
	VS_SPI_ReadWriteByte(0x4d);
	VS_SPI_ReadWriteByte(0xea);
	VS_SPI_ReadWriteByte(0x6d);
	VS_SPI_ReadWriteByte(0x54);
	VS_SPI_ReadWriteByte(0x00);
	VS_SPI_ReadWriteByte(0x00);
	VS_SPI_ReadWriteByte(0x00);
	VS_SPI_ReadWriteByte(0x00);
	rt_pin_write(VS_XDCS,1);
	rt_thread_mdelay(150);

	return VS_RD_Reg(SPI_HDAT0);// VS1003如果得到的值为0x807F，则表明完好;VS1053为0X83FF.;
}
